Add coverage report path to SonarQube scan action

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -46,3 +46,6 @@ jobs:
       uses: SonarSource/sonarqube-scan-action@v5
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        args: >
+          -Dsonar.python.coverage.reportPaths=coverage.xml
