--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
 annotated-types==0.7.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+coverage==7.8.0
 dotenv==0.9.9
 idna==3.10
 iniconfig==2.1.0
+mypy==1.15.0
+mypy-extensions==1.0.0
 packaging==24.2
 pluggy==1.5.0
 pydantic==2.11.1
 pydantic-settings==2.8.1
 pydantic_core==2.33.0
 pytest==8.3.5
+pytest-cov==6.1.0
 python-dotenv==1.1.0
 requests==2.32.3
+types-requests==2.32.0.20250328
 typing-inspection==0.4.0
 typing_extensions==4.13.0
 urllib3==2.3.0
